Fix Bug 287199 - Canceling doesn't reset the changes made in the dialog

(nor does reopening it)

Thanks David to help me. We must close xmldocument.

FIXED-IN: 4.10
BUG: 287199